<resources>

    <string name="swift_response">SWIFT RESPONSE</string>
    <string name="create_new_account">Create New Account</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="phone">Phone</string>
    <string name="register">Register</string>
    <string name="already_registered_login_here">Already Registered ? Login Here</string>
    <string name="app_label">Swift Response</string>
    <string name="new_here_create_account">New Here? Create Account</string>
    <string name="login">LOGIN</string>
    <string name="login_text">Login</string>
    <string name="logout">Logout</string>
    <string name="welcome_to_dashboard">Welcome to Dashboard!</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="road_accidents">road accidents</string>
    <string name="ambulance_layout">ambulance</string>
    <string name="fire_layout">fire</string>
    <string name="floods_layout">floods</string>
    <string name="police_layout">police</string>
    <string name="domestic_violence">Domestic Violence</string>
    <string name="emergency_servicesLayout">emergency services</string>
    <string name="image_fire">image fire</string>
    <string name="image_police">image police</string>
    <string name="image_accident">image accident</string>
    <string name="image_floods">image floods</string>
    <string name="image_violence">image violence</string>
    <string name="violence">VIOLENCE</string>
    <string name="image_ambulance">image ambulance</string>
    <string name="your_nameMain">Your Name</string>
    <string name="your_email_addressMain">Your Email Address</string>
    <string name="phone_numberMain">Phone Number</string>
    <string name="email_not_verifiedMain">Email Not Verified !</string>
    <string name="verify_nowMain">Verify Now</string>
    <string name="reset_passwordMain">Reset Password</string>
    <string name="phoneMain">Phone</string>
    <string name="change_profileMain">Change Profile</string>
    <string name="emailMain">Email</string>
    <string name="full_nameMain">Full Name</string>
    <string name="logoutMain">Logout</string>
    <string name="profile_imageIcon">profile image</string>
    <string name="person_icon">person icon</string>
    <string name="email_icon">email icon</string>
    <string name="phone_icon">phone icon</string>
    <string name="violence_protest">violence/protest</string>
    <string name="home_nav">Home</string>
    <string name="location_nav">location_nav</string>
    <string name="emergency_contacts">Emergency Contacts</string>
    <string name="profile_menu">Profile</string>
    <string name="login_nav">Login</string>
    <string name="profile_nav">Profile</string>
    <string name="logout_menu">Logout</string>
    <string name="logout_nav">Logout</string>
    <string name="communicate_menu">Communicate</string>
    <string name="share_nav">Share</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
</resources>